--- a/docs/usecase/sfmc-code-resources.mdx
+++ b/docs/usecase/sfmc-code-resources.mdx
@@ -136,7 +136,7 @@ Second very popular pattern is using single Cloud Page and changing displayed co
 
 This is where Code Resources come to save the day (or at least your forms). Instead of hosting your data processing code on second Cloud Page - put it on the JSON Code Resource and [generate](#generated-code-resources) responses. On the form page add AJAX calls to the Code Resource with request for all interactions needed:
 
-```js title="JavaScript functions on the form Cloud Page"
+```js {10,39} title="JavaScript functions on the form Cloud Page"
 /**
  * @function request
  * @description AJAX handler for POST calls to Code Resource Backend
@@ -186,12 +186,11 @@ async function pushData(payload) {
 
 With that code you can trigger calls in an easy and readable manner:
 
-```js title="Example of pushing data to backend"
+```js {1,5} title="Example of pushing data to backend"
 pushData({
     action: 'createLead',
     payload: formData,
-    sourceName: '<ctrl:var name=sourceName />',
-    subscriberKey: '<ctrl:var name=subscriberKey />'
+    sourceName: '<ctrl:var name=sourceName />'
 }).then(response => {
     /* Display appropriate feedback overlay based on the response */
     if (response.Status === 'OK') {
@@ -204,7 +203,7 @@ pushData({
 
 Finally, that data needs to be captured, processed and responded on the Code Resource:
 
-```html title="Example processing structure on the Code Resource"
+```html {3,13,24,26} title="Example processing structure on the Code Resource"
 <script runat="server">
     /* Get the Form Submission Data from JSON POST */
     var postedData = Platform.Request.GetPostData();
@@ -216,7 +215,6 @@ Finally, that data needs to be captured, processed and responded on the Code Res
     /* Capture data from POST body */
     var action = parsedData.action;
     var payload = parsedData.payload;
-    var subscriberKey = parsedData.subscriberKey;
 
     switch (action) {
         case 'validateEmail':
@@ -249,7 +247,7 @@ There is, however, a prize for all that work:
 - Once the complex implementation is done, you can just copy paste the solution to all your forms with minimal changes making it easily portable
 - You can create a Code Resource on different Business Unit then the form Cloud Page allowing for the data being added in different context (for example, centralized parent BU backend managing all child BU specific front ends)
 
-And then there is more! Code Resource is available not only for Cloud Pages - you can use exactly the same approach for any form hosted on your CMS or even within internal systems. As long as your front end can make an AJAX call, you can target your Code Resource and make use of Marketing Cloud power.
+And then there is more! Code Resource is available not only for Cloud Pages - you can use exactly the same approach for any form hosted on your CMS or even within internal systems. As long as your front end can make an AJAX call, you can target your Code Resource and make use of Marketing Cloud power. Nifty solution for providing Triggered Sends for 3rd party forms without the need to implement SFMC API on external services.
 
 #### More ideas
 
@@ -263,6 +261,37 @@ With great power comes great responsibility. Security should be a top priority w
 
 ### Security through obscurity
 
+The most obvious form of security is the obscurity of the solution. While standard static Code Resources are fullyt transparent, any programmatic part written in SSJS/AMPScript won't be accessible from outside the Marketing Cloud.
 
+And you can leverage that fact to your advantage by using SSJS `Request.Method()` to control output depending on the request type. For example, if you are creating a web form backend, you will only need to output something for POST calls, so you can catch GET method calls and output empty page.
+
+Yet another level you can apply is looking for specific elements within the payload. In examples above I used `action` key in frontend payload and build a `switch` block around it on the Code Resource. Thanks to it you not only need to know the correct `action` value, but also you will see only its specific response.
+
+This level of protection might be fine for low-risk solutions (dynamic CSS/JS, publicly available data structured for processing, etc.) but for anything more important, you should consider additional levels of security.
+
+### Allowlisting
+
+Another option available in the arsenal are three types of allowlists:
+
+1. Referer Allowlist allow you to limit which pages can interact with the Code Resource by using either SSJS `Platform.Request.ReferrerURL` or AMPScript `HTTPRequestHeader('Referer')` to check the URL.
+2. IP Allowlist enables simillar feature, but uses IP address instead of URL with the help of SSJS `Platform.Request.ClientIP()` or AMPScript `HTTPRequestHeader('X-Forwarded-For')`.
+3. Cookie Allowlist let's you validate cookies created on previous step with SSJS `Platform.Request.GetCookieValue('CookieName')`.
+
+### DE Lookup
+
+If the request comes from Marketing Cloud controlled resource (Cloud Page, Email, another Code Resource) you can also leverage Data Extension for even more strict security. Inserting some data into the Data Extension in the first step and validate it with Lookup against the payload content on Code Resource.
+
+### SSO
+
+Finally, if the Code Resource is part of your internal solution created only for Marketing Cloud users, you may leverage full-blown SSO to make it as secure as the whole platform. Read more on that approach in the [Cloud Page Apps article](./sfmc-cloud-page-apps.mdx#a-good-application-is-a-secure-application).
 
 ## Examples
+
+With the flexibility of Code Resources, the sky is the limit for interesting use cases. Here, I want to share a few of my favourite ones to show you what can be done with this awesome tool:
+
+1. Protect your Cloud Page Forms from spambots with [Google reCaptcha v2](https://ampscript.xyz/how-tos/how-to-implement-google-recaptcha-on-marketing-cloud-forms/) and [v3](https://ampscript.xyz/how-tos/how-to-add-recaptcha-v3-to-your-forms-in-salesforce-marketing-cloud/) by [Ivan Razine](https://www.linkedin.com/in/ivanrazine/).
+2. Run [SSJS within a Journey Activity](https://www.linkedin.com/pulse/ssjs-journey-builder-sascha-huwald/) by [Sascha Huwald](https://www.linkedin.com/in/sascha-huwald/).
+3. Create a custom Chrome search engine that can find and directly open SFMC Data Extensions right from your url bar by [Michał Rzepka](https://www.linkedin.com/in/michalrzepka90/) (unfortunately not yet documented - we are waiting Michał ;)).
+4. [Cloud Page Apps](./sfmc-cloud-page-apps.mdx) that can make your and yours team lifes easier.
+
+Know other inspiring Code Resource use cases? Let me know!
