Final version of the Code Resource article

--- a/docs/ssjs/debugging-ssjs.mdx
+++ b/docs/ssjs/debugging-ssjs.mdx
@@ -22,7 +22,7 @@ When you start working with programmatic languages in Salesforce Marketing Cloud
 Before diving deep into errors, let's talk about where to write the SSJS. The language is useful in many places within the Marketing Cloud ecosystem. Among else in:
 
 - Cloud Pages (Web Studio)
-- Code Resources (Web Studio)
+- [Code Resources](../usecase/sfmc-code-resource.mdx) (Web Studio)
 - Content Blocks (Content Builder)
 - Emails and other communication (Email Studio / Mobile Studio / Content Builder)
 - Script Activities (Automation Studio)
